# nonebot-plugin-EnjoyAnimation

./: EnjoyAnimation.py  LICENSE  README.md
EnjoyAnimation/: EnjoyAnimation.py  EnjoyAnimation_bak.py  QBsimpleAPI.py  __init__.py  classes.py  html_render.py  index.py  schedule_lite.py  schedute_lite.py  variable.py
EnjoyAnimation/EnjoyAnimation_web/: login.html  new_user.html  user.html  video.html
EnjoyAnimation/EnjoyAnimation_web/static/: index.css  index.js  new_user.css
EnjoyAnimation_web/static/: index.css
Example/beta/: pyvenv.cfg
Example/beta/Scripts/: activate  activate.bat
Example/beta/enjoy/: .env.prod  README.md  User_setting.json  animations.json  pyproject.toml
