[project]
name = "enjoy"
version = "0.1.0"
description = "enjoy"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11"}
]
plugins = ["EnjoyAnimation", "nonebot_plugin_htmlrender", "nonebot_plugin_apscheduler"]
plugin_dirs = []
builtin_plugins = ["echo"]
